--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,20 @@
 version: "3"
 
 services:
+#  api:
+#    image: 'necute_boy/api:1.0.0'
+#    container_name: 'image-api'
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - 'postgres'
+#      - 'minio'
+#    environment:
+#      - 'SPRING_DATASOURCE_URL=jdbc:postgresql://editor:5432/image-project'
+#      - 'MINIO_URL=http://image-minio:9000'
 
   postgres:
     image: postgres:14.5-alpine
@@ -15,6 +29,16 @@ services:
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
     volumes:
       - db-data:/var/lib/postgresql/data
+  minio:
+    image: minio/minio:latest
+    container_name: 'image-minio'
+    environment:
+      - 'MINIO_ROOT_USER=user'
+      - 'MINIO_ROOT_PASSWORD=password'
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    command: server /data --console-address :9001
 
 volumes:
   db-data:
