--- a/.github/workflows/pipline.yaml
+++ b/.github/workflows/pipline.yaml
@@ -33,7 +33,7 @@ jobs:
         uses: madrapps/jacoco-report@v1.6.1
         with:
           paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
-          token: ${{ secrets.MY_GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           min-coverage-overall: 50
           min-coverage-changed-files: 50
 
@@ -49,7 +49,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3.1.0
         with:
-          images: necuteboy/image-project
+          images: necute_boy/image-project
 
       - name: build and push Docker image
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main'}}
