--- a/.github/workflows/pipline.yaml
+++ b/.github/workflows/pipline.yaml
@@ -33,7 +33,7 @@ jobs:
         uses: madrapps/jacoco-report@v1.6.1
         with:
           paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
           min-coverage-overall: 50
           min-coverage-changed-files: 50
 
