--- a/.github/workflows/pipline.yaml
+++ b/.github/workflows/pipline.yaml
@@ -27,15 +27,15 @@ jobs:
       - name: run tests
         run: mvn clean install
 
-      - name: add coverage to
+      - name: add coverage to PR
         id: jacoco
         if: (github.event_name != 'workflow_dispatch')
         uses: madrapps/jacoco-report@v1.6.1
         with:
           paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
           token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 75
-          min-coverage-changed-files: 75
+          min-coverage-overall: 50
+          min-coverage-changed-files: 50
           update-comment: true
           title: "Jacoco Report"
 
